# binary-bits

./: .gitignore  BitsQC.hs  CHANGELOG.markdown  README.markdown  binary-bits.cabal  cabal.project  caerbannog.cabal  stack.yaml
.github/workflows/: ci.yaml
src/lib/Data/Binary/: Bits.hs
src/lib/Data/Binary/Bits/: Get.hs  Put.hs
src/test/: Main.hs
