cabal-version: >= 1.10

name: binary-bits
version: 0.5
synopsis: Bit parsing/writing on top of binary.
description:
  Bit parsing/writing on top of binary. Provides functions to read and write
  bits to and from 8\/16\/32\/64 words.

author: Lennart Kolmodin
build-type: Simple
category: Data, Parsing
license-file: LICENSE.txt
license: BSD3
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/binary-bits
  type: git

library
  build-depends:
    base >= 4.12.0 && < 4.15
    , binary >= 0.8.6 && < 0.9
    , bytestring >= 0.10.8 && < 0.11
  default-language: Haskell98
  exposed-modules:
    Data.Binary.Bits
    Data.Binary.Bits.Get
    Data.Binary.Bits.Put
  ghc-options:
    -O2
    -Wall
  hs-source-dirs: src/lib

test-suite test
  build-depends:
    base
    , binary
    , binary-bits
    , bytestring
    , hspec >= 2.7.1 && < 2.8
    , QuickCheck >= 2.13.2 && < 2.15
    , random >= 1.1 && < 1.3
  default-language: Haskell98
  hs-source-dirs: src/test
  main-is: Main.hs
  type: exitcode-stdio-1.0
